syntax = "proto3";

package nexa.proto.generated.authorization.v1;
option go_package = "nexa/proto/generated/golang/authorization/v1";

import "google/protobuf/empty.proto";
import "common/paged.proto";
import "authorization/v1/message.proto";

service RoleService {
  rpc Create(RoleCreateRequest) returns (RoleCreateResponse);
  rpc Update(RoleUpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(RoleDeleteRequest) returns (google.protobuf.Empty);
  rpc GetUser(GetUserRolesRequest) returns (GetUserRolesResponse);
  rpc Find(RoleFindRequest) returns (RoleFindResponse);
  rpc FindAll(common.PagedElementInput) returns (RoleFindAllResponse);

  rpc AddUser(AddUserRolesRequest) returns (google.protobuf.Empty);
  rpc RemoveUser(RemoveUserRolesRequest) returns (google.protobuf.Empty);

  rpc AppendPermissions(RoleAppendPermissionsRequest) returns (google.protobuf.Empty);
  rpc RemovePermissions(RoleRemovePermissionsRequest) returns (google.protobuf.Empty);
}

message GetUserRolesRequest {
  string user_id = 1;
  bool include_permission = 2;  // either need the permissions also transmitted or not
}

message GetUserRolesResponse {
  repeated RolePermission role_permissions = 1;
}

message AddUserRolesRequest {
  string user_id = 1;
  repeated string role_ids = 2;
}

message RemoveUserRolesRequest {
  string user_id = 1;
  repeated string role_ids = 2;
}

message RoleCreateRequest {
  string name = 1;
  optional string description = 2;
  repeated string permission_ids = 3;
}

message RoleCreateResponse {
  string id = 1;
}

message RoleUpdateRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
}

message RoleDeleteRequest {
  string id = 1;
}

message RoleFindRequest {
  repeated string role_ids = 1;
}

message RoleFindResponse {
  repeated Role roles = 1;
}

message RoleFindAllResponse {
  common.PagedElementOutput details = 1;
  repeated Role roles = 2;
}

message RoleAppendPermissionsRequest {
  string role_id = 1;
  repeated string permission_ids = 2;
}

message RoleRemovePermissionsRequest {
  string role_id = 1;
  repeated string permission_ids = 2;
}